cambio de imagen

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,10 +1,10 @@
 #header {
     width: 100%;
     height: 30rem;
-    background-image: url(../../../assets/img/DSC_0171.webp);
+    background-image: url(../../../assets/img/DSC_0740.webp);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom;
+    background-position: center;
     background-attachment: fixed;
     position: relative;
 }
