--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
- background-color: #36393F;   
+ background-color: #36393F;
+}
+
+button {
+  border-radius: 30px;
+  text-align: center;
+  background: linear-gradient(-45deg, #6E41E2, #d918eb, #3273ff, #8120a7);
+	animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  color: white;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
