--- a/src/app/content/competencias/competencias.component.html
+++ b/src/app/content/competencias/competencias.component.html
@@ -1,10 +1,62 @@
 <section id="competencias">
     <div class="container">
         <div class="center">
-            <h2>Asesoría</h2>
-            <p class="lead">
-                Si necesitas ayuda para armar un equipo o arreglar uno, no dudes en preguntar.
-            </p>
+            <h2>Competencias</h2>
+            <div class="row">
+                <div class="col-xl-6 col-lg-6-col-md-12 col-sm-12">
+                    <p class="lead">HTML5</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p class="lead">CSS</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p class="lead">Javascript</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p class="lead">Angular</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p class="lead">PHP</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p class="lead">Laravel</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6-col-md-12 col-sm-12">
+                    <div class="row p-4">
+                        <div class="col-6 mb-4">
+                            <div class="center">
+                                <p class="lead">Desarrollando desde</p>
+                                <h2>2019</h2>
+                            </div>
+                        </div>
+                        <div class="col-6 mb-4">
+                            <div class="center">
+                                <p class="lead">Trabajos realizados con éxito</p>
+                                <h2>4</h2>
+                            </div>
+                        </div>
+                        <div class="col-6 mb-4 mt-4">
+                            <div class="center">
+                                <p class="lead">Empresas en las que he desarrollado</p>
+                                <h2>1</h2>
+                            </div>
+                        </div>
+                        <div class="col-6 mb-4 mt-5">
+                            <div class="center">
+                                <a href="../../../assets/files/CVPRIETO-04-04-22.pdf" download="CV Pablo J Prieto" class="btn-block">Descargar CV</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
