--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -57,7 +57,7 @@
     <!-- Copyright -->
     <div class="text-center p-3 text-white" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022:
-      <a class="text-white" href="https://mdbootstrap.com/">pabvlov.cl</a> - Pablo Prieto
+      <a class="text-white" href="https://instagram.com/pabvlov">pabvlov.cl</a> - Pablo Prieto
     </div>
     <!-- Copyright -->
   </footer>
