--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -5,8 +5,10 @@
 }
 
 a.active {
-    background-color: #5700c9 !important;
     color: white !important;
+    background: linear-gradient(-45deg, #6E41E2, #d918eb, #3273ff, #8120a7);
+	animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
 }
 
 a.text-sm-center {
