--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,13 +1,10 @@
 <section id="header">
-    <div id="inicio"></div>
-    <div class="introduction">
-        <div class="container">
-            <h1 class="intro">Web Developer</h1>
-            <div class="row">
-                <div class="col-7 right">
-                    <h3 class="intro">Pablo J. Prieto</h3>
-                </div>
-            </div>
-        </div>
+    <div id="inicio">
+      <div class="introduction">
+          <div class="container">
+              <h1 class="text-center text-white xd">Web Developer</h1>
+              <h3 class="text-center text-white">[[ pabvlov ]]</h3>
+          </div>
+      </div>
     </div>
 </section>
