--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.html
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.html
@@ -3,18 +3,18 @@
         <div class="center">
             <h2>Acerca de Mí</h2>
         </div>
-        
+
         <div class="center">
             <p class="lead">
-                Mi nombre es Pablo Prieto, estudio Ingeniería en Informática en la Universidad Tecnológica de Chile INACAP.
+                Mi nombre es Pablo, estudio Ingeniería en Informática en la Universidad Tecnológica de Chile INACAP.
                 Tengo {{ anios }} años y de vez en cuando me gusta hacer trabajos independientes.
                 Me especializo en páginas web, con lenguajes como PHP, Javascript y Angular.
             </p>
         </div>
-        
+
     </div>
 </section>
 
 <section id="imagen">
-    
+
 </section>
