--- a/src/app/content/trabajos/trabajos.component.css
+++ b/src/app/content/trabajos/trabajos.component.css
@@ -7,11 +7,11 @@ h2 {
 }
 
 .btn-trabajos {
-    width: 100%;
+    min-width: 100%;
     color: white;
     background-color: #5700c9;
     border-radius: 10px;
-    padding: 2rem 30px;
+    padding: 2rem 0;
     text-decoration: none;
     transition: 0.3s ease;
 }
