--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,6 +1,6 @@
 #header {
     width: 100%;
-    height: 30rem;
+    height: 40rem;
     background-image: url(../../../assets/img/DSC_0740.webp);
     background-repeat: no-repeat;
     background-size: cover;
@@ -19,16 +19,22 @@
     /* background-image: linear-gradient(to bottom, #36393f00, #36393F 95%); */
     width: 100%;
     height: 1em;
-  }
+}
+
+#inicio {
+  height: 40rem;
+  background: rgb(0,212,255);
+  background: linear-gradient(180deg, rgba(0,212,255,1) 0%, rgba(255,255,255,0) 0%, rgba(54,57,63,1) 100%);
+}
 
 h1.intro, h3.intro {
     color: white;
-    
+
 }
 
 h1.intro {
     text-transform: uppercase;
-    font-size: 70px;
+    font-size: 4rem;
 }
 
 
@@ -40,3 +46,8 @@ h1.intro {
     text-align: center;
 }
 
+.xd {
+  padding-top: 20%;
+  font-weight: 700;
+  text-transform: uppercase;
+}
