--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,12 +1,20 @@
 #header {
     width: 100%;
     height: 40rem;
-    background-image: url(../../../assets/img/DSC_0740.webp);
+    background: linear-gradient(-45deg, #6E41E2, #d918eb, #3273ff, #8120a7);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 400% 400%;
     background-position: center;
     background-attachment: fixed;
     position: relative;
+}
+
+.img {
+  width: 200px;
+  height: 200px;
+  clip-path: polygon(50% 8%, 100% 0, 92% 49%, 100% 100%, 0 100%, 8% 51%, 0 0);
 }
 
 #header:after {
@@ -47,7 +55,7 @@ h1.intro {
 }
 
 .xd {
-  padding-top: 20%;
+  padding-top: 20px;
   font-weight: 700;
   text-transform: uppercase;
 }
