--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,8 +2,12 @@
     <div id="inicio">
       <div class="introduction">
           <div class="container">
-              <h1 class="text-center text-white xd">Web Developer</h1>
-              <h3 class="text-center text-white">[[ pabvlov ]]</h3>
+              <img src="../../../assets/img/foto perfil 2.png" alt="" class="img img-fluid rounded mx-auto d-block animate__animated animate__bounceInDown animate__slower">
+              <h1 class="text-center text-white xd animate__animated animate__fadeInRight animate__fast">Web Developer</h1>
+              <div class="animate_pulse animate__infinite">
+                <h3 class="text-center text-white animate__animated animate__fadeInRight">[[ pabvlov ]]</h3>
+              </div>
+
           </div>
       </div>
     </div>
