--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~animate.css/animate.min';
 
 body {
  background-color: #36393F;
@@ -34,3 +35,4 @@ button {
 		background-position: 0% 50%;
 	}
 }
+
