--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~animate.css/animate.min';
+@import '~font-awesome/css/font-awesome.min';
 
 body {
  background-color: #36393F;
