--- a/src/app/content/trabajos/trabajos.component.html
+++ b/src/app/content/trabajos/trabajos.component.html
@@ -1,6 +1,6 @@
 <section id="trabajos">
     <div class="container">
-        <div class="content">
+        <div class="content animate__animated animate__pulse animate__infinite">
             <div class="center">
                 <h2>Mis Trabajos</h2>
                 <div class="row">
@@ -8,14 +8,15 @@
                         <a href="" class="btn-trabajos btn btn-block">EzPeasy</a>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-4">
-                        <a href="" class="btn-trabajos btn btn-block">BookPlace</a>
+                        <a href="" class="btn-trabajos btn btn-block">Pabvlov Portfolio</a>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-4">
                         <a href="" class="btn-trabajos btn btn-block">CreativePrices</a>
                     </div>
                 </div>
+                <span class="text-white">Lamento decirte que ninguno de los trabajos de arriba están online :(</span>
             </div>
         </div>
-        
+
     </div>
 </section>
