--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,7 +2,7 @@
     <div id="inicio">
       <div class="introduction">
           <div class="container">
-            <div class="img animate__animated animate__bounceInDown animate__slower">
+            <div class="img animate__animated animate__bounceInDown">
               <img src="../../../assets/img/foto perfil 2.png" alt="" class="img-fluid rounded mx-auto d-block">
             </div>
 
