--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.html
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.html
@@ -3,15 +3,21 @@
         <div class="center">
             <h2>Acerca de Mí</h2>
         </div>
-
+        <hr>
         <div class="center">
             <p class="lead">
-                Mi nombre es Pablo, estudio Ingeniería en Informática en la Universidad Tecnológica de Chile INACAP.
-                Tengo {{ anios }} años y de vez en cuando me gusta hacer trabajos independientes.
-                Me especializo en páginas web, con lenguajes como PHP, Javascript y Angular.
+                Mi nombre es Pablo, estudio <strong>Ingeniería en Informática</strong> en la Universidad Tecnológica de Chile INACAP.
+                Tengo {{ anios }} años y de vez en cuando me gusta hacer trabajos independientes o favores.
+                <br>
+                Tengo una clara fijación y talento cuando se trata de desarrollo de <strong>Frontend</strong> con Bootstrap, 
+                se me hace muy fácil y entretenido trabajar con las tecnologías que provee <strong>Javascript</strong>, tal como este
+                Portafolio que está hecho con innecesariamente con <strong>AngularJS</strong>.
+                <br>
+                En la empresa que estoy actualmente he tenido el gusto de aprender muchas cosas, entre ellas mejorar mi habilidad en frontend,
+                a migrar de ASP a .NET Core aplicaciones bancarias, y hacer una API Rest con .NET Core y trabajar en equipo con GIT.
             </p>
         </div>
-
+        <hr>
     </div>
 </section>
 
