--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.css
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.css
@@ -2,6 +2,12 @@ p.lead, h2 {
     color: white;
 }
 
+.lead {
+    margin: auto;
+    width: 700px;
+    text-align: justify;
+}
+
 
 #quienchuchasoy {
     padding-top: 3rem;
@@ -21,4 +27,9 @@ div.justify {
     height: 30rem;
     background-image: url(../../../assets/img/Screenshot_1.webp);
     background-attachment: fixed;
+}
+
+strong {
+    font-weight: 500;
+    font-style: italic;
 }
