--- a/src/app/content/trabajos/trabajos.component.html
+++ b/src/app/content/trabajos/trabajos.component.html
@@ -8,7 +8,7 @@
                         <a href="" class="btn-trabajos btn btn-block">EzPeasy</a>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-4">
-                        <a href="" class="btn-trabajos btn btn-block">Pabvlov Portfolio</a>
+                        <a href="" class="btn-trabajos btn btn-block">Prorums</a>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-4">
                         <a href="" class="btn-trabajos btn btn-block">CreativePrices</a>
