--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.css
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.css
@@ -25,7 +25,7 @@ div.justify {
 #imagen {
     clip-path: polygon(0 8%, 100% 0%, 100% 91%, 0% 100%);
     height: 30rem;
-    background-image: url(../../../assets/img/Screenshot_1.webp);
+    background-image: url(../../../assets/img/background.webp);
     background-attachment: fixed;
 }
 
