--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
       <div class="introduction">
           <div class="container">
             <div class="img animate__animated animate__bounceInDown">
-              <img src="../../../assets/img/foto perfil 2.png" alt="" class="img-fluid rounded mx-auto d-block">
+              <img src="../../../assets/img/foto perfil 2.png" alt="Foto de Perfil de Pablo Prieto" class="img-fluid rounded mx-auto d-block">
             </div>
 
               <h1 class="text-center text-white xd animate__animated animate__fadeInRight animate__fast">Web Developer</h1>
