--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.html
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.html
@@ -1,20 +1,18 @@
 <section id="quienchuchasoy">
     <div class="container">
-        <div class="center">
-            <h2>Acerca de Mí</h2>
-        </div>
         <hr>
         <div class="center">
+            <h3 class="text-white">¡Hola Mundo!</h3>
             <p class="lead">
-                Mi nombre es Pablo, estudio <strong>Ingeniería en Informática</strong> en la Universidad Tecnológica de Chile INACAP.
-                Tengo {{ anios }} años y de vez en cuando me gusta hacer trabajos independientes o favores.
-                <br>
-                Tengo una clara fijación y talento cuando se trata de desarrollo de <strong>Frontend</strong> con Bootstrap, 
-                se me hace muy fácil y entretenido trabajar con las tecnologías que provee <strong>Javascript</strong>, tal como este
-                Portafolio que está hecho con innecesariamente con <strong>AngularJS</strong>.
-                <br>
-                En la empresa que estoy actualmente he tenido el gusto de aprender muchas cosas, entre ellas mejorar mi habilidad en frontend,
-                a migrar de ASP a .NET Core aplicaciones bancarias, y hacer una API Rest con .NET Core y trabajar en equipo con GIT.
+                
+                <strong>Fullstack Web Developer</strong> de <strong>{{ anios }} años</strong> con talento comprobable en Frontend, 
+                formando parte de equipos de desarrollo con metodología agile SCRUM. 
+                He participado en Bootcamps para Fullstacks usando tecnologías como <strong>ReactJS</strong> y <strong>NodeJS</strong>. 
+                Tengo un aprendizaje muy rápido cuando se trata de cualquier materia de <strong>Javascript</strong>, pues es mi lenguaje de programación favorito. 
+                La experiencia que he tenido me ha ayudado a mejorar varios aspectos que la mayoría de los programadores padecen a la hora de trabajar en equipo, 
+                a aprender mucho en poco tiempo, a entender un poco más que antes el modelo de negocio y a tener mucha más <strong>confianza en mí mismo</strong> y en mis habilidades y además, 
+                aprender tecnologías más a fondo como <strong>AngularJS y GIT</strong>.
+
             </p>
         </div>
         <hr>
