--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,12 +3,12 @@
       <div class="introduction">
           <div class="container">
             <div class="img animate__animated animate__bounceInDown">
-              <img src="../../../assets/img/foto perfil 2.png" alt="Foto de Perfil de Pablo Prieto" class="img-fluid rounded mx-auto d-block">
+              <img src="../../../assets/img/foto perfil 2.png" alt="Foto de Perfil de Pablo Prieto Cepeda" class="img-fluid rounded mx-auto d-block">
             </div>
 
-              <h1 class="text-center text-white xd animate__animated animate__fadeInRight animate__fast">Web Developer</h1>
+              <h1 class="text-center text-white xd animate__animated animate__fadeInRight animate__fast">Fullstack Web Developer</h1>
               <div class="animate_pulse animate__infinite">
-                <h1 class="text-center text-white animate__animated animate__fadeInRight">[[ Pablo Prieto ]]</h1>
+                <h1 class="text-center text-white animate__animated animate__fadeInRight"><pre>< Pablo Prieto /></pre></h1>
               </div>
 
           </div>
