--- a/src/app/content/competencias/competencias.component.html
+++ b/src/app/content/competencias/competencias.component.html
@@ -46,7 +46,10 @@
                         <div class="col-6 mb-4 mt-4">
                             <div class="center">
                                 <p class="lead">Empresas en las que he desarrollado</p>
-                                <h2>1</h2>
+                                <a href="https://socius.cl/" class="imgredir">
+                                    <img    class="maxh100"
+                                            src="https://media-exp1.licdn.com/dms/image/C4E0BAQE6EitEAVNhtQ/company-logo_200_200/0/1627941513654?e=2147483647&v=beta&t=S6zwbKfJrkH9muP-TIWzxRilG30GflNzsrbUx7B8Br0" alt="Socius Arquitectura y Plataformas Tecnológicas">
+                                </a>
                             </div>
                         </div>
                         <div class="col-6 mb-4 mt-5">
