--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -2,10 +2,11 @@
     width: 100%;
     height: 40rem;
     background: linear-gradient(-45deg, #6E41E2, #d918eb, #3273ff, #8120a7);
+    background: url(../../../assets/img/IMG_4332.jpg);
     animation: gradient 15s ease infinite;
     background-size: 400% 400%;
     background-repeat: no-repeat;
-    background-size: 400% 400%;
+    background-size: 200% 200%;
     background-position: center;
     background-attachment: fixed;
     position: relative;
