--- a/src/app/content/competencias/competencias.component.html
+++ b/src/app/content/competencias/competencias.component.html
@@ -20,9 +20,17 @@
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
+                    <p class="lead">React JS</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p class="lead">C# .NET Core</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                     <p class="lead">PHP</p>
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <p class="lead">Laravel</p>
                     <div class="progress">
@@ -46,10 +54,31 @@
                         <div class="col-6 mb-4 mt-4">
                             <div class="center">
                                 <p class="lead">Empresas en las que he desarrollado</p>
-                                <a href="https://socius.cl/" class="imgredir">
-                                    <img    class="maxh100"
-                                            src="https://media-exp1.licdn.com/dms/image/C4E0BAQE6EitEAVNhtQ/company-logo_200_200/0/1627941513654?e=2147483647&v=beta&t=S6zwbKfJrkH9muP-TIWzxRilG30GflNzsrbUx7B8Br0" alt="Socius Arquitectura y Plataformas Tecnológicas">
-                                </a>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <a href="https://socius.cl/" class="imgredir">
+                                            <img    class="maxh100"
+                                                    src="https://media-exp1.licdn.com/dms/image/C4E0BAQE6EitEAVNhtQ/company-logo_200_200/0/1627941513654?e=2147483647&v=beta&t=S6zwbKfJrkH9muP-TIWzxRilG30GflNzsrbUx7B8Br0" alt="Socius Arquitectura y Plataformas Tecnológicas">
+                                        </a>
+                                    </div>
+                                    <div class="col-6">
+                                        <a href="https://jumputt.com/" class="imgredir">
+                                            <img    class="maxh100"
+                                                    src="https://media-exp2.licdn.com/dms/image/C560BAQG0v9abPK-Row/company-logo_200_200/0/1591125760107?e=1666224000&v=beta&t=L4_6CrSrgKeDzh81WGKPy_z5ZCLJhK51gKCO8ivAbxc" alt="Jumpitt, We Think Different.">
+                                        </a>
+                                    </div>
+                                    <div class="col-6">
+                                        <a href="https://jumputt.com/" class="imgredir">
+                                            <img    class="maxh100"
+                                                    src="https://media-exp2.licdn.com/dms/image/C4D0BAQGkpQT4KUVYkg/company-logo_200_200/0/1654524033034?e=1666224000&v=beta&t=C1w8UzX1M63lhTgR_qxGXHAH6P7JmDxSLqfIN0RO8yQ" alt="Banco Santander (Cliente de Socius)">
+                                        </a>
+                                    </div>
+                                    
+                                    
+                                    
+                                </div>
+                                
+                                
                             </div>
                         </div>
                         <div class="col-6 mb-4 mt-5">
