--- a/src/app/content/competencias/competencias.component.html
+++ b/src/app/content/competencias/competencias.component.html
@@ -62,23 +62,18 @@
                                         </a>
                                     </div>
                                     <div class="col-6">
-                                        <a href="https://jumputt.com/" class="imgredir">
+                                        <a href="https://jumpitt.com/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="https://media-exp2.licdn.com/dms/image/C560BAQG0v9abPK-Row/company-logo_200_200/0/1591125760107?e=1666224000&v=beta&t=L4_6CrSrgKeDzh81WGKPy_z5ZCLJhK51gKCO8ivAbxc" alt="Jumpitt, We Think Different.">
                                         </a>
                                     </div>
                                     <div class="col-6">
-                                        <a href="https://jumputt.com/" class="imgredir">
+                                        <a href="https://santander.cl/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="https://media-exp2.licdn.com/dms/image/C4D0BAQGkpQT4KUVYkg/company-logo_200_200/0/1654524033034?e=1666224000&v=beta&t=C1w8UzX1M63lhTgR_qxGXHAH6P7JmDxSLqfIN0RO8yQ" alt="Banco Santander (Cliente de Socius)">
                                         </a>
                                     </div>
-                                    
-                                    
-                                    
                                 </div>
-                                
-                                
                             </div>
                         </div>
                         <div class="col-6 mb-4 mt-5">
