--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,7 +8,7 @@
 
               <h1 class="text-center text-white xd animate__animated animate__fadeInRight animate__fast">Fullstack Web Developer</h1>
               <div class="animate_pulse animate__infinite">
-                <h1 class="text-center text-white animate__animated animate__fadeInRight"><pre>< Pablo Prieto /></pre></h1>
+                <h1 class="text-center text-white animate__animated animate__zoomInUp"><pre>< Pablo Prieto /></pre></h1>
               </div>
 
           </div>
