--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.html
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.html
@@ -10,7 +10,7 @@
                 He participado en Bootcamps para Fullstacks usando tecnologías como <strong>ReactJS</strong> y <strong>NodeJS</strong>. 
                 Tengo un aprendizaje muy rápido cuando se trata de cualquier materia de <strong>Javascript</strong>, pues es mi lenguaje de programación favorito. 
                 La experiencia que he tenido me ha ayudado a mejorar varios aspectos que la mayoría de los programadores padecen a la hora de trabajar en equipo, 
-                a aprender mucho en poco tiempo, a entender un poco más que antes el modelo de negocio y a tener mucha más <strong>confianza en mí mismo</strong> y en mis habilidades y además, 
+                a aprender mucho en poco tiempo, a tener mucha más <strong>confianza en mí mismo</strong> y en mis habilidades y además, 
                 aprender tecnologías más a fondo como <strong>AngularJS y GIT</strong>.
 
             </p>
