--- a/src/app/content/trabajos/trabajos.component.html
+++ b/src/app/content/trabajos/trabajos.component.html
@@ -14,9 +14,12 @@
                         <a href="" class="btn-trabajos btn btn-block">CreativePrices</a>
                     </div>
                 </div>
-                <span class="text-white">Lamento decirte que ninguno de los trabajos de arriba están online :(</span>
+                <span class="text-white">Lamento decirte que ninguno de los trabajos propios de arriba están online :(</span>
             </div>
         </div>
-
+        <div class="center">
+            <h2>Experiencia Laboral</h2>
+        </div>
+<br>
     </div>
 </section>
