se quita quienchuchasoy y se reemplaza por aboutme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <app-navbar></app-navbar>
 
-    <app-quienchuchasoy></app-quienchuchasoy>
+    <app-aboutme></app-aboutme>
     <app-trabajos></app-trabajos>
     <app-competencias></app-competencias>
 
