--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.html
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.html
@@ -1,4 +1,4 @@
-<section id="quienchuchasoy">
+<section id="aboutme">
     <div class="container" id="container" #container>
         <div class="triangle"   [style.top]="posY + 'px'" 
                                 [style.left]="posX + 'px'" 
