--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -8,8 +8,8 @@
           [className]="lugar === 'inicio' ? 'flex-sm-fill text-sm-center nav-link active' : 'flex-sm-fill text-sm-center nav-link'"
       >Inicio</a>
       <a  class="flex-sm-fill text-sm-center nav-link"
-          href="#quienchuchasoy" (click)="navbar('quienchuchasoy')"
-          [className]="lugar === 'quienchuchasoy' ? 'flex-sm-fill text-sm-center nav-link active' : 'flex-sm-fill text-sm-center nav-link'"
+          href="#aboutme" (click)="navbar('aboutme')"
+          [className]="lugar === 'aboutme' ? 'flex-sm-fill text-sm-center nav-link active' : 'flex-sm-fill text-sm-center nav-link'"
       >Acerca de mí</a>
       <a  class="flex-sm-fill text-sm-center nav-link"
           href="#trabajos" (click)="navbar('trabajos')"
