--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,16 +1,11 @@
 <section id="header">
     <div id="inicio">
-      <div class="introduction">
-          <div class="container">
-            <div class="img animate__animated animate__bounceInDown">
-              <img src="../../../assets/img/foto perfil 2.png" alt="Foto de Perfil de Pablo Prieto Cepeda" class="img-fluid rounded mx-auto d-block">
-            </div>
-
-              <h1 class="text-center text-white xd animate__animated animate__fadeInRight animate__fast">Fullstack Web Developer</h1>
+      <div class="container">
+          <div class="introduction">
+              <h1 class="text-center text-white xd animate__animated animate__fadeInRight animate__fast">¿Necesitas una página web?</h1>
               <div class="animate_pulse animate__infinite">
-                <h1 class="text-center text-white animate__animated animate__zoomInUp"><pre>< Pablo Prieto /></pre></h1>
+                <h1 class="text-center text-white animate__animated animate__zoomInUp"><code>< Tenemos la solución al problema que tengas /></code></h1>
               </div>
-
           </div>
       </div>
     </div>
